# DAWork2

./: CMakeLists.txt  README.md  main.cpp
DAWork2/: CMakeLists.txt
DAWork2/Data/: in01.txt
DAWork2/Source/: Manager.h  Travels.h  main.cpp
Data/: in01.txt  in02.txt  in03.txt
Source/: Manager.cpp  Manager.h  Reader.cpp  Reader.h  Spots.cpp  Spots.h  Travel.cpp  Travel.h  Travels.cpp  Travels.h  main.cpp  pathCalculator.cpp  pathCalculator.h
input/: in02.txt  in03.txt
